# pytorch_nvcomp

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  publish.yml
examples/: image_roundtrip.py
pytorch_nvcomp/: __init__.py  nvcomp_ext.cu
scripts/: install_nvcomp.sh
